Actualizar URLs de API a la versión en producción y ajustar configuraciones de CORS